--- a/index.html
+++ b/index.html
@@ -3,8 +3,132 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-  <title>MiAmor GME Match</title>
+  <!-- Primary Meta Tags -->
+<title>MiAmor Platform | Match, Earn & Find Love Across Africa</title>
+<link rel="canonical" href="https://mi-amor.site/index.html">
+<meta name="description" content="Join MiAmor to earn money while finding love. Match with singles, play games, sell online, gain skills, and win rewards daily.">
+<meta name="keywords" content="MiAmor, MiAmor app, MiAmor registration, MiAmor platform, earn online, MiAmor legit, match and earn, African dating, MiAmor Nigeria">
+<meta name="author" content="MiAmor Team">
+
+<!-- Open Graph / Facebook -->
+<meta property="og:title" content="MiAmor Platform | Earn & Match with Love">
+<meta property="og:description" content="Find love and earn with MiAmor. Play games, sell items, and connect with singles across Africa.">
+<meta property="og:image" content="https://mi-amor.site/Mo7.jpg">
+<meta property="og:url" content="https://mi-amor.site">
+<meta property="og:type" content="website">
+
+<!-- Twitter Card -->
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="MiAmor Platform | Find Love & Earn Daily">
+<meta name="twitter:description" content="Earn up to $2.5 per match, play games, and win rewards on MiAmor. Trusted across Africa.">
+<meta name="twitter:image" content="https://mi-amor.site/Mo1.jpg">
+
+<!-- Preload & Fonts -->
+<link rel="preload" href="style.css" as="style">
+<link rel="stylesheet" href="style.css">
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;700&display=swap" rel="stylesheet">
+<link rel="shortcut icon" href="https://mi-amor.site/Milogo.png" type="image/png">
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
+  <script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebPage",
+  "name": "Register on MiAmor Platform | MiAmor App | How to Sign Up and Earn on MiAmor Website",
+  "url": "https://mi-amor.site/miamor_registration1",
+  "description": "Register on the MiAmor Platform to earn while finding love. Match with singles, play games, sell products, gain digital skills, and win amazing rewards.",
+  "keywords": [
+    "mi-amor.site",
+    "MiAmor Platform",
+    "MiAmor App",
+    "MiAmor Website",
+    "How to register on MiAmor",
+    "Is MiAmor legit?",
+    "MiAmor registration link",
+    "MiAmor review",
+    "How to earn from MiAmor",
+    "MiAmor app download",
+    "MiAmor sign-up process",
+    "MiAmor Platform Nigeria",
+    "Earn from dating platforms in Nigeria"
+  ],
+  "publisher": {
+    "@type": "Organization",
+    "name": "MiAmor Platform",
+    "url": "https://mi-amor.site",
+    "logo": "https://mi-amor.site/MiAmor-Icon.png",
+    "description": "MiAmor is a global platform that combines love, entrepreneurship, and earnings. Users can match with others, earn from social media, play games, sell items, and gain valuable skills.",
+    "sameAs": [
+      "https://mi-amor.site",
+      "https://linktr.ee/miamor_register",
+      "https://facebook.com/MiAmorGlobal",
+      "https://twitter.com/MiAmorApp"
+    ]
+  },
+  "potentialAction": {
+    "@type": "Action",
+    "name": "Register on MiAmor Platform",
+    "url": "https://linktr.ee/miamor_register"
+  },
+  "mainEntity": {
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is MiAmor Platform?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "MiAmor is a platform where users can match with singles, earn through games, learn skills, sell items, and win rewards. It blends relationships, digital income, and growth."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How much is the registration fee?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Registration costs ₦10,000 for MiAmor Plus and ₦14,000 for MiAmor Ultra. A ₦1,000 discount is currently active for the first 20 people who register today."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How can I earn on MiAmor Platform?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "You earn by matching with users, playing games, uploading social content, selling items, and completing platform tasks. Rewards are paid daily."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Do I need referrals to earn?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "No. Referrals are optional but increase your income. You can earn from tasks and games without referring anyone."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How do I withdraw my earnings from MiAmor?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Withdrawals are made directly to your bank account once you meet the daily payout threshold."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Is MiAmor a legit platform?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. MiAmor is fully registered with the Corporate Affairs Commission (CAC) and trusted by thousands of users across Africa."
+        }
+      }
+    ]
+  }
+}
+</script>
+
   <style>
     * {
       box-sizing: border-box;
