How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -59,7 +59,7 @@
     "@type": "Organization",
     "name": "MiAmor Platform",
     "url": "https://mi-amor.site",
-    "logo": "https://mi-amor.site/MiAmor-Icon.png",
+    "logo": "https://mi-amor.site/Milogo.png",
     "description": "MiAmor is a global platform that combines love, entrepreneurship, and earnings. Users can match with others, earn from social media, play games, sell items, and gain valuable skills.",
     "sameAs": [
       "https://mi-amor.site",
