How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
   <!-- Primary Meta Tags -->
-<title>MiAmor Platform | Match, Earn & Find Love Across Africa</title>
+<title>MiAmor Platform | How MiAmor works | How to join and  earn</title>
 <!--<link rel="canonical" href="https://mi-amor.site/index.html">-->
 <meta name="description" content="Join MiAmor to earn money while finding love. Match with singles, play games, sell online, gain skills, and win rewards daily.">
 <meta name="keywords" content="MiAmor, MiAmor app, MiAmor registration, MiAmor platform, earn online, MiAmor legit, match and earn, African dating, MiAmor Nigeria">
@@ -13,7 +13,7 @@
 <!-- Open Graph / Facebook -->
 <meta property="og:title" content="MiAmor Platform | Earn & Match with Love">
 <meta property="og:description" content="Find love and earn with MiAmor. Play games, sell items, and connect with singles across Africa.">
-<meta property="og:image" content="https://mi-amor.site/Mo7.jpg">
+<meta property="og:image" content="https://mi-amor.site/Mo6.jpg">
 <meta property="og:url" content="https://mi-amor.site">
 <meta property="og:type" content="website">
 
@@ -21,7 +21,7 @@
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="MiAmor Platform | Find Love & Earn Daily">
 <meta name="twitter:description" content="Earn up to $2.5 per match, play games, and win rewards on MiAmor. Trusted across Africa.">
-<meta name="twitter:image" content="https://mi-amor.site/Mo1.jpg">
+<meta name="twitter:image" content="https://mi-amor.site/Mo7.jpg">
 
 <!-- Preload & Fonts -->
 <link rel="preload" href="style.css" as="style">
