--- a/index.html
+++ b/index.html
@@ -543,7 +543,7 @@ Whether for fun or profit, each win brings real earnings.
     
   </div>
 
-  <button class="join-btn">Join us today</button>
+  <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
 
   <footer class="miamor-footer">
     <div class="footer-hearts"></div>
