How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -429,7 +429,8 @@
     <div class="logo"><span>mi</span>Amor</div>
     <div class="gme">Platform</div>
     <div class="sub-text">
-      Earn up to <span>$2.5</span> from Matching and Getting matched with the love of your life on <span>MiAmor</span>
+      There are two packages on miamor,<span>(1) The Plus package</span> 
+     and (2) <span>The Ultra package</span>
     </div>
   </div>
 
@@ -437,32 +438,56 @@
     <div class="profile-box slide-in-left pre-animate">
       <img src="Mo1.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>What Is MiAmor?</h1></strong><br><p>MiAmor is a global platform that connects users across Africa and beyond. Find love, earn income, and gain valuable skills through networking. MiAmor blends relationships, entrepreneurship, and empowerment—helping you grow socially and financially.</p><br>Join a strong community built on love and opportunity
+        <strong><h1>MIAMOR PLUS FRAMEWORK
+
+N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
+🔴 Onboarding Gift🎁: N8000<br>
+🔴Connection Commission/REF: N9100<br>
+🔴1st Level Spillover: N200<br>
+🔴2nd Level Spillover: N100<br>
+🔴Game modules: N3,000 daily<br>
+🔴Matching ads-on: N2,000 daily<br>
+🔴Open love hamper: N5,000 on every love box opened<br>
+🔴Tiktok/fb lovers share: N2,500 per 5,000<br>
+*Extra bonuses*<br>
+♥️Number of love partner matches: 2 per week✅<br>
+♥️Incentives: fully deployed ✅<br>
+♥️Couples Challenge: fully deployed✅<br>
+♥️Skillslab: Fully Deployed ✅<br>
+♥️Couples trip: Fully Deployed ✅<br>
+♥️Love Hamper: Fully Deployed✅<br>
+♥️Sell it sector: Fully Deployed ✅<br>
+♥️Marathon contest: Fully Deployed✅<br>
+❤️ Authomated Withdrawals : Fully Deployed✅<br>
       </div>
     </div>
-    <button class="join-btn">Join us today</button>
-    <div class="heart">💞</div>
+    <button class="join-btn">MIAMOR PLUS</button>
+    
     <div class="profile-box fade-in pre-animate">
       <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>Earn While You Match – Find Love & Make Money on MiAmor</h1></strong><br><p>What if every match earned you up to $2.5? On MiAmor, your swipe can spark love and income. Discover real connections, get rewarded instantly, and turn dating into daily earnings. It’s not just romance—it’s revenue. Find love. Get paid. Repeat.</p><br>Join MiAmor today and let every match bring love and money to your life.m
+        <strong><h1>MIAMOR ULTRA FRAMEWORK💙✨ N14,000</h1></strong><br>🔵Access Fee/Signup Fee: N14000<br>
+🔵 Onboarding Gift🎁: N12500<br>
+🔵Connection Commission/REF: N12500<br>
+🔵1st Level Spillover: N400<br>
+🔵2nd Level Spillover: N150<br>
+🔵Game modules: N5000 daily<br>
+🔵Matching ads-on: N2500 daily <br>
+🔵Open love hamper: N10,000 on every love hamper/box opened <br>
+🔵Tiktok/fb lovers share: N2500 per 5,000 views<br>
+*Extra bonuses*<br>
+💙Number of love partner matches: 5 per week✅<br>
+💙Incentives: fully deployed ✅<br>
+💙Couples Challenge: fully deployed✅<br>
+💙Skillslab: Fully Deployed ✅<br>
+💙Couples trip: Fully Deployed ✅<br>
+💙Love Hamper: Fully Deployed✅<br>
+💙Sell it sector: Fully Deployed ✅<br>
+💙Marathon contest: Fully Deployed✅<br>
+💙Automated withdrawals: Fully Deployed✅<br>
       </div>
     </div>
-    <button class="join-btn">Join us today</button>
-    <div class="heart">💞</div>
-    <div class="profile-box slide-in-left pre-animate">
-      <img src="Mo2.jpg" alt="Male Match">
-      <div class="match-message">
-        <strong><h1>How Can I Play and Earn Real Cash on MiAmor?</h1></strong><br><p>Play fun games and earn real money on MiAmor!
-Fund your wallet
-Choose from exciting games
-Win and withdraw instantly to your bank account.
-
-Whether for fun or profit, each win brings real earnings.
-</p><br>🎮 Play smart. Win real. Get paid fast!
-      </div>
-    </div>
-    <button class="join-btn">Join us today</button>
+    <button class="join-btn">START WITH MIAMOR ULTRA</button>
     <!--<div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
       <img src="Mo3.jpg" alt="Female Match">
@@ -542,8 +567,6 @@ Whether for fun or profit, each win brings real earnings.
     </div>-->
     
   </div>
-
-  <button class="join-btn">Join us today</button>
 
   <footer class="miamor-footer">
     <div class="footer-hearts"></div>
