How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -436,7 +436,7 @@
 
   <div class="profiles">
     <div class="profile-box slide-in-left pre-animate">
-      <img src="Mo1.jpg" alt="Male Match">
+      <img src="Miamorplus.jpg" alt="Male Match">
       <div class="match-message">
         <strong><h1>MIAMOR PLUS FRAMEWORK
 
@@ -464,7 +464,7 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
     <button class="join-btn">MIAMOR PLUS</button>
     
     <div class="profile-box fade-in pre-animate">
-      <img src="M1.jpg" alt="Female Match">
+      <img src="Miamorultra.jpg" alt="Female Match">
       <div class="match-message">
         <strong><h1>MIAMOR ULTRA FRAMEWORK💙✨ N14,000</h1></strong><br>🔵Access Fee/Signup Fee: N14000<br>
 🔵 Onboarding Gift🎁: N12500<br>
