How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -427,7 +427,7 @@
 
   <div class="header">
     <div class="logo"><span>mi</span>Amor</div>
-    <div class="gme">Platform</div>
+    <div class="gme">Platform Framework</div>
     <div class="sub-text">
       There are two packages on miamor,<span>(1) The Plus package</span> 
      and (2) <span>The Ultra package</span>
