How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -461,7 +461,7 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 ❤️ Authomated Withdrawals : Fully Deployed✅<br>
       </div>
     </div>
-    <button class="join-btn">MIAMOR PLUS</button>
+    <a href="miamor_registration1.html"><button class="join-btn">MIAMOR PLUS</button></a>
     
     <div class="profile-box fade-in pre-animate">
       <img src="Miamorultra.jpg" alt="Female Match">
@@ -487,7 +487,7 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 💙Automated withdrawals: Fully Deployed✅<br>
       </div>
     </div>
-    <button class="join-btn">START WITH MIAMOR ULTRA</button>
+    <a href="miamor_registration1.html"><button class="join-btn">START WITH MIAMOR ULTRA</button></a>
     <!--<div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
       <img src="Mo3.jpg" alt="Female Match">
