--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
         <strong><h1>What Is MiAmor?</h1></strong><br><p>MiAmor is a global platform that connects users across Africa and beyond. Find love, earn income, and gain valuable skills through networking. MiAmor blends relationships, entrepreneurship, and empowerment—helping you grow socially and financially.</p><br>Join a strong community built on love and opportunity
       </div>
     </div>
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
@@ -449,7 +449,7 @@
         <strong><h1>Earn While You Match – Find Love & Make Money on MiAmor</h1></strong><br><p>What if every match earned you up to $2.5? On MiAmor, your swipe can spark love and income. Discover real connections, get rewarded instantly, and turn dating into daily earnings. It’s not just romance—it’s revenue. Find love. Get paid. Repeat.</p><br>Join MiAmor today and let every match bring love and money to your life.m
       </div>
     </div>
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
@@ -464,7 +464,7 @@ Whether for fun or profit, each win brings real earnings.
 </p><br>🎮 Play smart. Win real. Get paid fast!
       </div>
     </div>
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
@@ -475,7 +475,7 @@ Whether for fun or profit, each win brings real earnings.
 ✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
       </div>
     </div>
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
@@ -485,7 +485,7 @@ Whether for fun or profit, each win brings real earnings.
       </div>
     </div>
 
-     <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+     <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
@@ -494,7 +494,7 @@ Whether for fun or profit, each win brings real earnings.
         <strong><h1>Can I Learn Skills on MiAmor?</h1></strong><br><p>Yes! MiAmor is more than a love platform — it's your digital learning hub. Access in-demand skills like digital marketing, copywriting, mini importation, freelancing, web & app development, graphics, UI/UX, and more. Grow personally and professionally. On MiAmor, love meets lifelong growth and opportunity.</p><br>Click to start
       </div>
     </div>
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
@@ -504,7 +504,7 @@ Whether for fun or profit, each win brings real earnings.
       </div>
     </div>
 
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
@@ -513,7 +513,7 @@ Whether for fun or profit, each win brings real earnings.
         <strong><h1>How Can I Earn and Find Love Across Africa with MiAmor?</h1></strong><br><p>MiAmor is a trusted global platform helping people across Africa—Ghana, Kenya, Uganda, Cameroon, Sierra Leone, and beyond—find love and earn money at the same time. Thousands are already building relationships and income through MiAmor. Join now and experience a platform where love and opportunity have no borders.</p><br>Click to start
       </div>
     </div>
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
@@ -523,7 +523,7 @@ Whether for fun or profit, each win brings real earnings.
       </div>
     </div>
 
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
@@ -532,7 +532,7 @@ Whether for fun or profit, each win brings real earnings.
         <strong><h1>What Are MiAmor Incentives?</h1></strong><br><p>MiAmor rewards you for your efforts! We know turning leads into active users is tough, so we created a generous incentive system to support you. Every user gets rewarded handsomely just for participating. ✅ Download our incentive layout now and start earning more with MiAmor.</p><br>Click to start
       </div>
     </div>
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box slide-in-left pre-animate">
@@ -542,7 +542,7 @@ Whether for fun or profit, each win brings real earnings.
       </div>
     </div>
     
-    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+    <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
     <div class="heart">💞</div>
     <div class="profile-box fade-in pre-animate">
