--- a/index.html
+++ b/index.html
@@ -554,7 +554,7 @@ Whether for fun or profit, each win brings real earnings.
     
   </div>
 
-  <a href="How-miamor-works.html"><button class="join-btn">Join us today</button>&</a>
+  <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
 
   <footer class="miamor-footer">
     <div class="footer-hearts"></div>
