--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -37,30 +37,27 @@
 {
   "@context": "https://schema.org",
   "@type": "WebPage",
-  "name": "Register on MiAmor Platform | MiAmor App | How to Sign Up and Earn on MiAmor Website",
-  "url": "https://mi-amor.site/miamor_registration1",
-  "description": "Register on the MiAmor Platform to earn while finding love. Match with singles, play games, sell products, gain digital skills, and win amazing rewards.",
+  "name": "MiAmor Platform Framework | MiAmor Plus & MiAmor Ultra",
+  "url": "https://mi-amor.site/How-miamor-works.html",
+  "description": "There are two packages on MiAmor: Plus (₦10,000) and Ultra (₦14,000). Compare benefits like onboarding gifts, commissions, spillovers, daily game modules, matching add-ons, love hampers, social share earnings, weekly matches, and automated withdrawals. ₦1,000 discount for the first 20 signups today.",
   "keywords": [
     "mi-amor.site",
     "MiAmor Platform",
-    "MiAmor App",
-    "MiAmor Website",
-    "How to register on MiAmor",
-    "Is MiAmor legit?",
-    "MiAmor registration link",
-    "MiAmor review",
-    "How to earn from MiAmor",
-    "MiAmor app download",
-    "MiAmor sign-up process",
-    "MiAmor Platform Nigeria",
-    "Earn from dating platforms in Nigeria"
+    "MiAmor Plus",
+    "MiAmor Ultra",
+    "MiAmor registration",
+    "How MiAmor works",
+    "Match and earn",
+    "Social share earnings",
+    "Love hamper",
+    "Automated withdrawals"
   ],
   "publisher": {
     "@type": "Organization",
     "name": "MiAmor Platform",
     "url": "https://mi-amor.site",
     "logo": "https://mi-amor.site/Milogo.png",
-    "description": "MiAmor is a global platform that combines love, entrepreneurship, and earnings. Users can match with others, earn from social media, play games, sell items, and gain valuable skills.",
+    "description": "MiAmor lets users find love and earn online via games, matching, social sharing, selling items, and skills development.",
     "sameAs": [
       "https://mi-amor.site",
       "https://linktr.ee/miamor_register",
@@ -71,63 +68,80 @@
   "potentialAction": {
     "@type": "Action",
     "name": "Register on MiAmor Platform",
-    "url": "https://linktr.ee/miamor_register"
+    "url": "https://mi-amor.site/miamor_registration1.html"
   },
   "mainEntity": {
     "@type": "FAQPage",
     "mainEntity": [
       {
         "@type": "Question",
-        "name": "What is MiAmor Platform?",
+        "name": "What packages does MiAmor offer?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "MiAmor is a platform where users can match with singles, earn through games, learn skills, sell items, and win rewards. It blends relationships, digital income, and growth."
+          "text": "MiAmor has two packages: MiAmor Plus and MiAmor Ultra. The page compares their prices and benefits."
         }
       },
       {
         "@type": "Question",
-        "name": "How much is the registration fee?",
+        "name": "How much is MiAmor Plus and what do I get?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Registration costs ₦10,000 for MiAmor Plus and ₦14,000 for MiAmor Ultra. A ₦1,000 discount is currently active for the first 20 people who register today."
+          "text": "MiAmor Plus costs ₦10,000. Benefits shown include: onboarding gift ₦8,000; connection commission ₦9,100; spillovers ₦200/₦100; game modules up to ₦3,000 daily; matching add-ons up to ₦2,000 daily; love hamper ₦5,000 per opened box; social share ₦2,500 per 5,000 views; up to 2 matches per week; automated withdrawals and platform incentives."
         }
       },
       {
         "@type": "Question",
-        "name": "How can I earn on MiAmor Platform?",
+        "name": "How much is MiAmor Ultra and what do I get?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "You earn by matching with users, playing games, uploading social content, selling items, and completing platform tasks. Rewards are paid daily."
+          "text": "MiAmor Ultra costs ₦14,000. Benefits shown include: onboarding gift ₦12,500; connection commission ₦12,500; spillovers ₦400/₦150; game modules up to ₦5,000 daily; matching add-ons up to ₦2,500 daily; love hamper ₦10,000 per opened box; social share ₦2,500 per 5,000 views; up to 5 matches per week; automated withdrawals and all Plus benefits with higher limits."
         }
       },
       {
         "@type": "Question",
-        "name": "Do I need referrals to earn?",
+        "name": "Is there a registration discount today?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "No. Referrals are optional but increase your income. You can earn from tasks and games without referring anyone."
+          "text": "Yes. The page states a ₦1,000 discount for the first 20 people who register today."
         }
       },
       {
         "@type": "Question",
-        "name": "How do I withdraw my earnings from MiAmor?",
+        "name": "How do game modules and matching add-ons pay?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Withdrawals are made directly to your bank account once you meet the daily payout threshold."
+          "text": "The Plus package lists up to ₦3,000 daily for game modules and up to ₦2,000 daily for matching add-ons. Ultra lists up to ₦5,000 daily for game modules and up to ₦2,500 daily for matching add-ons."
         }
       },
       {
         "@type": "Question",
-        "name": "Is MiAmor a legit platform?",
+        "name": "What is the TikTok/Facebook lovers share earning?",
         "acceptedAnswer": {
           "@type": "Answer",
-          "text": "Yes. MiAmor is fully registered with the Corporate Affairs Commission (CAC) and trusted by thousands of users across Africa."
+          "text": "Both packages show ₦2,500 per 5,000 views for TikTok/Facebook lovers share."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "How many matches per week do I get?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "MiAmor Plus shows up to 2 partner matches per week, while MiAmor Ultra shows up to 5 per week."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are withdrawals automated?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes. The page notes that automated withdrawals are fully deployed."
         }
       }
     ]
   }
 }
 </script>
+
 
   <style>
     * {
