miamor_payment_gateway.html

--- a/miamor_payment_gateway.html
+++ b/miamor_payment_gateway.html
@@ -237,7 +237,7 @@
   <main class="wrap" role="main">
     <section class="card" aria-label="Payment card">
       <div class="lock" aria-hidden="true">🔒</div>
-      <h1>Tapify Payment Gateway</h1>
+      <h1>Miamor Payment Gateway</h1>
       <p class="muted">Kindly proceed to your bank app to complete this transaction.</p>
 
       <div class="warning">⚠️📌 <strong>WARNING:</strong> DO NOT PAY WITH OPAY</div>
