How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -68,7 +68,7 @@
   "potentialAction": {
     "@type": "Action",
     "name": "Register on MiAmor Platform",
-    "url": "https://mi-amor.site/miamor_registration1.html"
+    "url": "https://mi-amor.site/miamor_payment_gateway.html"
   },
   "mainEntity": {
     "@type": "FAQPage",
@@ -475,7 +475,7 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 ❤️ Authomated Withdrawals : Fully Deployed✅<br>
       </div>
     </div>
-    <a href="miamor_registration1.html"><button class="join-btn">MIAMOR PLUS</button></a>
+    <a href="miamor_payment_gateway.html"><button class="join-btn">MIAMOR PLUS</button></a>
     
     <div class="profile-box fade-in pre-animate">
       <img src="Miamorultra.jpg" alt="Female Match">
@@ -501,7 +501,7 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 💙Automated withdrawals: Fully Deployed✅<br>
       </div>
     </div>
-    <a href="miamor_registration1.html"><button class="join-btn">START WITH MIAMOR ULTRA</button></a>
+    <a href="miamor_payment_gateway.html"><button class="join-btn">START WITH MIAMOR ULTRA</button></a>
     
   </div>
 
