miamor_payment_gateway.html

--- a/miamor_payment_gateway.html
+++ b/miamor_payment_gateway.html
@@ -246,7 +246,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Account Number</div>
-            <div id="accNo" class="value">7048831912</div>
+            <div id="accNo" class="value">6067151384</div>
           </div>
           <button class="copy-btn" data-copy="#accNo" aria-label="Copy account number">Copy 📋</button>
         </div>
@@ -262,7 +262,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Account Name</div>
-            <div id="accName" class="value">GODWIN WISDOM AMADI</div>
+            <div id="accName" class="value">UBONG PETER ISONGUYO</div>
           </div>
           <button class="copy-btn" data-copy="#accName" aria-label="Copy account name">Copy 📋</button>
         </div>
@@ -270,7 +270,7 @@
         <div class="field">
           <div class="meta">
             <div class="label">Amount to Pay</div>
-            <div id="amt" class="value">₦10,000</div>
+            <div id="amt" class="value">₦14,000 or 10,000</div>
           </div>
           <button class="copy-btn" data-copy="#amt" aria-label="Copy amount">Copy 📋</button>
         </div>
@@ -286,7 +286,7 @@
         <div id="timer" class="timer" aria-live="polite">00:59:59</div>
       </div>
 
-      <button class="primary">✅ I've completed the payment</button>
+      <a><button class="primary">✅ I've completed the payment</button></a>
       <a href="#" class="back">Back To Subscription Page</a>
     </section>
   </main>
