How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -475,7 +475,15 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 ❤️ Authomated Withdrawals : Fully Deployed✅<br>
       </div>
     </div>
-    <a href="miamor_payment_gateway.html"><button class="join-btn">MIAMOR PLUS</button></a>
+    <a href="https://wa.me/2348157823869?
+
+text=1%20am%20ready%20to%20join%20the%
+
+20MiAmor%20Platform.%20What%20are%20t
+
+he%20requirements%2C%20and%20is%20it%
+
+20available%20in%20my%20country%3F"><button class="join-btn">MIAMOR PLUS</button></a>
     
     <div class="profile-box fade-in pre-animate">
       <img src="Miamorultra.jpg" alt="Female Match">
@@ -501,7 +509,15 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 💙Automated withdrawals: Fully Deployed✅<br>
       </div>
     </div>
-    <a href="miamor_payment_gateway.html"><button class="join-btn">START WITH MIAMOR ULTRA</button></a>
+    <a href="https://wa.me/2348157823869?
+
+text=1%20am%20ready%20to%20join%20the%
+
+20MiAmor%20Platform.%20What%20are%20t
+
+he%20requirements%2C%20and%20is%20it%
+
+20available%20in%20my%20country%3F"><button class="join-btn">START WITH MIAMOR ULTRA</button></a>
     
   </div>
 
