--- a/index.html
+++ b/index.html
@@ -562,10 +562,10 @@ Whether for fun or profit, each win brings real earnings.
     <div class="footer-content">
       <img src="Milogo.png" alt="MiAmor Logo" class="footer-logo" />
       <div class="social-icons">
-        <a href="#"><i class="fab fa-whatsapp"></i></a>
-        <a href="#"><i class="fab fa-tiktok"></i></a>
-        <a href="#"><i class="fab fa-telegram-plane"></i></a>
-        <a href="#"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://wa.me/2348157823869?text=I%20am%20ready%20to%20register%20on%20Mi-amor%"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://wa.me/2348157823869?text=I%20am%20ready%20to%20register%20on%20Mi-amor%"><i class="fab fa-tiktok"></i></a>
+        <a href="https://wa.me/2348157823869?text=I%20am%20ready%20to%20register%20on%20Mi-amor%"><i class="fab fa-telegram-plane"></i></a>
+        <a href="https://wa.me/2348157823869?text=I%20am%20ready%20to%20register%20on%20Mi-amor%"><i class="fab fa-x-twitter"></i></a>
       </div>
       <p class="copyright">© 2025 MiAmor Platform. All rights reserved.</p>
     </div>
