How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -475,9 +475,9 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 ❤️ Authomated Withdrawals : Fully Deployed✅<br>
       </div>
     </div>
-    <a href="https://wa.me/2348157823869?
+    <a href="https://wa.me/2349164872447?
 
-text=1%20am%20ready%20to%20join%20the%
+text=I%20am%20ready%20to%20join%20the%
 
 20MiAmor%20Platform.%20What%20are%20t
 
@@ -509,9 +509,9 @@ he%20requirements%2C%20and%20is%20it%
 💙Automated withdrawals: Fully Deployed✅<br>
       </div>
     </div>
-    <a href="https://wa.me/2348157823869?
+    <a href="https://wa.me/2349164872447?
 
-text=1%20am%20ready%20to%20join%20the%
+text=I%20am%20ready%20to%20join%20the%
 
 20MiAmor%20Platform.%20What%20are%20t
 
