--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -310,7 +310,7 @@
       <input type="password" id="password" class="form-control" required />
     </div>
 
-    <a href="#" class="mil-btn mil-m mil-add-arrow mil-adaptive-right" onclick="storeFullname()" type="button">Join Now!</a>
+    <a href="How-miamor-works.html" class="mil-btn mil-m mil-add-arrow mil-adaptive-right" onclick="storeFullname()" type="button">Join Now!</a>
   </form>
 
   <div class="card review-section">
