Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -321,14 +321,14 @@
 
   <div class="chat-popup-container">
     <div class="chat-popup" id="chat">
-      <img src="R1.jpg" alt="User Profile">
+      <img src="Milogo.png" alt="User Profile">
       <span id="chat-message">Hello</span>
     </div>
   </div>
 
   <!-- FOOTER -->
   <footer>
-    <img src="miamor-logo.png" alt="MiAmor Logo" class="logo">
+    <img src="Milogo.png" alt="MiAmor Logo" class="logo">
     <div class="social-icons">
       <a href="#"><i class="fab fa-facebook"></i></a>
       <a href="#"><i class="fab fa-whatsapp"></i></a>
