--- a/miamor_payment_gateway.html
+++ b/miamor_payment_gateway.html
@@ -287,7 +287,7 @@
       </div>
 
       <a><button class="primary">✅ I've completed the payment</button></a>
-      <a href="#" class="back">Back To Subscription Page</a>
+      <a href="https://wa.me/2349164872447?text=I%20have%20successfully%20made%20payment%20and%20I%20was%20redirected%20to%20get%20an%20access%20key%20here" class="back">Back To Subscription Page</a>
     </section>
   </main>
 
@@ -301,25 +301,25 @@
 
       <nav class="mi-socials" aria-label="Social links">
         <!-- WhatsApp -->
-        <a href="#" aria-label="WhatsApp" title="WhatsApp">
+        <a href="https://wa.me/2349164872447?text=I%20have%20successfully%20made%20payment%20and%20I%20was%20redirected%20to%20get%20an%20access%20key%20here" aria-label="WhatsApp" title="WhatsApp">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
             <path d="M20.52 3.48A11.86 11.86 0 0 0 12.05.06C5.6.06.4 5.26.4 11.7c0 2.06.54 4.08 1.56 5.86L.02 24l6.6-1.89a11.7 11.7 0 0 0 5.43 1.38h.01c6.45 0 11.65-5.2 11.65-11.64 0-3.11-1.21-6.03-3.2-8.37zm-8.47 18.2c-1.86 0-3.68-.5-5.27-1.44l-.38-.23-3.92 1.12 1.1-3.83-.25-.4A9.93 9.93 0 0 1 2 11.7c0-5.5 4.47-9.96 10-9.96 2.67 0 5.18 1.04 7.07 2.93a9.95 9.95 0 0 1 2.92 7.06c0 5.5-4.47 9.96-10 9.96zm5.85-7.45c-.32-.16-1.88-.93-2.17-1.04-.29-.11-.5-.16-.72.16-.21.32-.83 1.03-1.02 1.25-.19.21-.37.24-.69.08-.32-.16-1.35-.5-2.57-1.59-.95-.85-1.6-1.9-1.79-2.22-.19-.32-.02-.49.14-.65.14-.14.32-.37.49-.56.16-.19.22-.32.33-.54.11-.21.05-.4-.03-.56-.08-.16-.72-1.73-.99-2.37-.26-.63-.52-.54-.72-.55h-.62c-.21 0-.56.08-.85.4-.29.32-1.12 1.09-1.12 2.66 0 1.57 1.15 3.09 1.31 3.3.16.21 2.27 3.47 5.49 4.85.77.33 1.37.53 1.84.68.77.25 1.47.21 2.03.13.62-.09 1.88-.77 2.15-1.51.27-.74.27-1.37.19-1.51-.08-.13-.29-.21-.6-.37z"/>
           </svg>
         </a>
         <!-- TikTok -->
-        <a href="#" aria-label="TikTok" title="TikTok">
+        <a href="https://wa.me/2349164872447?text=I%20have%20successfully%20made%20payment%20and%20I%20was%20redirected%20to%20get%20an%20access%20key%20here" aria-label="TikTok" title="TikTok">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
             <path d="M12.9 2h3.07a6.8 6.8 0 0 0 4.18 3.9v3.02a9.9 9.9 0 0 1-4.18-.95v6.94a5.9 5.9 0 1 1-5.9-5.9c.3 0 .6.03.88.08v3.14a2.8 2.8 0 1 0 2.1 2.7L12.9 2z"/>
           </svg>
         </a>
         <!-- Telegram -->
-        <a href="#" aria-label="Telegram" title="Telegram">
+        <a href="https://wa.me/2349164872447?text=I%20have%20successfully%20made%20payment%20and%20I%20was%20redirected%20to%20get%20an%20access%20key%20here" aria-label="Telegram" title="Telegram">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
             <path d="M9.03 16.89 8.86 21l3.3-3.46 6.86 5.02 3.98-17.43L1.5 11.1l5.4 1.6 12.7-8.08-10.57 10.3z"/>
           </svg>
         </a>
         <!-- X / Twitter -->
-        <a href="#" aria-label="Twitter (X)" title="Twitter (X)">
+        <a href="https://wa.me/2349164872447?text=I%20have%20successfully%20made%20payment%20and%20I%20was%20redirected%20to%20get%20an%20access%20key%20here" aria-label="Twitter (X)" title="Twitter (X)">
           <svg width="22" height="22" viewBox="0 0 24 24" fill="currentColor" aria-hidden="true">
             <path d="M18.14 2H21l-6.5 7.43L22.5 22h-6.6l-5.17-6.71L4.6 22H2l7.03-8.03L1.8 2h6.75l4.68 6.2L18.14 2zm-1.16 18.4h1.82L7.2 3.5H5.28l11.7 16.9z"/>
           </svg>
