--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
     <div class="profile-box slide-in-left pre-animate">
       <img src="Mo1.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>What Is MiAmor?</h1></strong><br><p>MiAmor is a global platform that connects users across Africa and beyond. Find love, earn income, and gain valuable skills through networking. MiAmor blends relationships, entrepreneurship, and empowerment—helping you grow socially and financially.</p><br>Join a strong community built on love and opportunity
+        <strong><h1>MiAmor Platform?</h1></strong><br><p>MiAmor is a global platform that connects users across Africa and beyond. Find love, earn income, and gain valuable skills through networking. MiAmor blends relationships, entrepreneurship, and empowerment—helping you grow socially and financially.</p><br>Join a strong community built on love and opportunity
       </div>
     </div>
     <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
@@ -446,7 +446,7 @@
     <div class="profile-box fade-in pre-animate">
       <img src="M1.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>Earn While You Match – Find Love & Make Money on MiAmor</h1></strong><br><p>What if every match earned you up to $2.5? On MiAmor, your swipe can spark love and income. Discover real connections, get rewarded instantly, and turn dating into daily earnings. It’s not just romance—it’s revenue. Find love. Get paid. Repeat.</p><br>Join MiAmor today and let every match bring love and money to your life.m
+        <strong><h1>Find Love & Make Money on MiAmor Website</h1></strong><br><p>What if every match earned you up to $2.5? On MiAmor, your swipe can spark love and income. Discover real connections, get rewarded instantly, and turn dating into daily earnings. It’s not just romance—it’s revenue. Find love. Get paid. Repeat.</p><br>Join MiAmor today and let every match bring love and money to your life.m
       </div>
     </div>
     <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
@@ -455,7 +455,7 @@
     <div class="profile-box slide-in-left pre-animate">
       <img src="Mo2.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>How Can I Play and Earn Real Cash on MiAmor?</h1></strong><br><p>Play fun games and earn real money on MiAmor!
+        <strong><h1>Register and Earn Money on MiAmor?</h1></strong><br><p>Play fun games and earn real money on MiAmor!
 Fund your wallet
 Choose from exciting games
 Win and withdraw instantly to your bank account.
@@ -470,7 +470,7 @@ Whether for fun or profit, each win brings real earnings.
     <div class="profile-box fade-in pre-animate">
       <img src="Mo3.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>What is the MiAmor Love Hamper and How Can You Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
+        <strong><h1>MiAmor Love Hamper and How You Can Win Gifts?</h1></strong><br>🎁 MiAmor Love Hamper gives users weekly chances to win surprise gifts like AirPods, Ring Lights, Power Banks, PES Pads & more—right from the dashboard. Just log in and watch for the hamper! 💝 It’s MiAmor’s way of saying thank you.
 ✅ Engage more, win more.
 ✅ Love and rewards go hand in hand on MiAmor.<br>Click to start
       </div>
@@ -500,7 +500,7 @@ Whether for fun or profit, each win brings real earnings.
     <div class="profile-box slide-in-left pre-animate">
       <img src="Mo6.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>How Can I Sell Items on MiAmor?</h1></strong><br><p>MiAmor’s Sell It Sector is your trusted online marketplace. Sell gadgets, clothes, or personal items directly to ready buyers—no middlemen, no stress. Enjoy fast, secure, and easy transactions. List your legal items now and turn them into quick cash while exploring all that MiAmor has to offer. List. Connect. Sell.</p><br>Start now
+        <strong><h1>How to Join and Sell Items on MiAmor?</h1></strong><br><p>MiAmor’s Sell It Sector is your trusted online marketplace. Sell gadgets, clothes, or personal items directly to ready buyers—no middlemen, no stress. Enjoy fast, secure, and easy transactions. List your legal items now and turn them into quick cash while exploring all that MiAmor has to offer. List. Connect. Sell.</p><br>Start now
       </div>
     </div>
 
@@ -519,7 +519,7 @@ Whether for fun or profit, each win brings real earnings.
     <div class="profile-box slide-in-left pre-animate">
       <img src="Mo8.jpg" alt="Male Match">
       <div class="match-message">
-        <strong><h1>What Can You Do on MiAmor?</h1></strong><br><p>MiAmor lets you earn and enjoy love! Get matched, play games, earn from TikTok, Facebook, and sharing. Join raffles, contests, and get bonuses, incentives, eBooks, love hampers, couple trips, daily tips, jobs, and sell online. Sign up today and enjoy MiAmor's all-in-one love, fun, and money-making features.</p><br>Start now 
+        <strong><h1>What Can You Do on MiAmor Platform?</h1></strong><br><p>MiAmor lets you earn and enjoy love! Get matched, play games, earn from TikTok, Facebook, and sharing. Join raffles, contests, and get bonuses, incentives, eBooks, love hampers, couple trips, daily tips, jobs, and sell online. Sign up today and enjoy MiAmor's all-in-one love, fun, and money-making features.</p><br>Start now 
       </div>
     </div>
 
@@ -529,7 +529,7 @@ Whether for fun or profit, each win brings real earnings.
     <div class="profile-box fade-in pre-animate">
       <img src="Mo9.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>What Are MiAmor Incentives?</h1></strong><br><p>MiAmor rewards you for your efforts! We know turning leads into active users is tough, so we created a generous incentive system to support you. Every user gets rewarded handsomely just for participating. ✅ Download our incentive layout now and start earning more with MiAmor.</p><br>Click to start
+        <strong><h1>MiAmor Website Incentives?</h1></strong><br><p>MiAmor rewards you for your efforts! We know turning leads into active users is tough, so we created a generous incentive system to support you. Every user gets rewarded handsomely just for participating. ✅ Download our incentive layout now and start earning more with MiAmor.</p><br>Click to start
       </div>
     </div>
     <a href="How-miamor-works.html"><button class="join-btn">Join us today</button></a>
@@ -548,7 +548,7 @@ Whether for fun or profit, each win brings real earnings.
     <div class="profile-box fade-in pre-animate">
       <img src="Mo11.jpg" alt="Female Match">
       <div class="match-message">
-        <strong><h1>Why Should I Join MiAmor?</h1></strong><br><p>MiAmor is secure, user-first, and globally trusted. Enjoy fast payouts, instant support, one-click matching, full transparency, and guaranteed privacy. Our platform is easy to use, with top-level data protection. Join today to connect, earn, and experience the MiAmor advantage—where love meets opportunity. 💘✨</p>
+        <strong><h1>How to Register and Why You Should  Join MiAmor?</h1></strong><br><p>MiAmor is secure, user-first, and globally trusted. Enjoy fast payouts, instant support, one-click matching, full transparency, and guaranteed privacy. Our platform is easy to use, with top-level data protection. Join today to connect, earn, and experience the MiAmor advantage—where love meets opportunity. 💘✨</p>
       </div>
     </div>
     
