--- a/index.html
+++ b/index.html
@@ -327,7 +327,7 @@
         radial-gradient(circle at 10% 30%, rgba(255, 255, 255, 0.25) 2%, transparent 4%),
         radial-gradient(circle at 90% 40%, rgba(255, 255, 255, 0.25) 2%, transparent 4%),
         radial-gradient(circle at 30% 70%, rgba(255, 255, 255, 0.25) 2%, transparent 4%),
-        url('https://upload.wikimedia.org/wikipedia/commons/3/30/Heart_symbol_red.svg');
+        /*url('https://upload.wikimedia.org/wikipedia/commons/3/30/Heart_symbol_red.svg');*/
       background-size: 16px 16px, 16px 16px, 16px 16px, 50px;
       background-repeat: repeat;
       opacity: 0.25;
@@ -562,10 +562,10 @@ Whether for fun or profit, each win brings real earnings.
     <div class="footer-content">
       <img src="Milogo.png" alt="MiAmor Logo" class="footer-logo" />
       <div class="social-icons">
-        <a href="https://wa.me/2349164872447?text=I%20am%20ready%20to%20register%20on%20Mi-amor%"><i class="fab fa-whatsapp"></i></a>
-        <a href="https://wa.me/2349164872447?text=I%20am%20ready%20to%20register%20on%20Mi-amor%"><i class="fab fa-tiktok"></i></a>
-        <a href="https://wa.me/2349164872447?text=I%20am%20ready%20to%20register%20on%20Mi-amor%"><i class="fab fa-telegram-plane"></i></a>
-        <a href="https://wa.me/2349164872447?text=I%20am%20ready%20to%20register%20on%20Mi-amor%"><i class="fab fa-x-twitter"></i></a>
+        <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-whatsapp"></i></a>
+        <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-tiktok"></i></a>
+        <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-telegram-plane"></i></a>
+        <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-x-twitter"></i></a>
       </div>
       <p class="copyright">© 2025 MiAmor Platform. All rights reserved.</p>
     </div>
