How-miamor-works.html

--- a/How-miamor-works.html
+++ b/How-miamor-works.html
@@ -341,7 +341,7 @@
         radial-gradient(circle at 10% 30%, rgba(255, 255, 255, 0.25) 2%, transparent 4%),
         radial-gradient(circle at 90% 40%, rgba(255, 255, 255, 0.25) 2%, transparent 4%),
         radial-gradient(circle at 30% 70%, rgba(255, 255, 255, 0.25) 2%, transparent 4%),
-        url('https://upload.wikimedia.org/wikipedia/commons/3/30/Heart_symbol_red.svg');
+        /*url('https://upload.wikimedia.org/wikipedia/commons/3/30/Heart_symbol_red.svg');*/
       background-size: 16px 16px, 16px 16px, 16px 16px, 50px;
       background-repeat: repeat;
       opacity: 0.25;
@@ -475,15 +475,7 @@ N10,000</h1></strong><br>🔴Access Fee/Signup Fee: N10,000
 ❤️ Authomated Withdrawals : Fully Deployed✅<br>
       </div>
     </div>
-    <a href="https://wa.me/2349164872447?
-
-text=I%20am%20ready%20to%20join%20the%
-
-20MiAmor%20Platform.%20What%20are%20t
-
-he%20requirements%2C%20and%20is%20it%
-
-20available%20in%20my%20country%3F"><button class="join-btn">MIAMOR PLUS</button></a>
+    <a href="https://tr.ee/LqPXfhcuSx"><button class="join-btn">MIAMOR PLUS</button></a>
     
     <div class="profile-box fade-in pre-animate">
       <img src="Miamorultra.jpg" alt="Female Match">
@@ -509,15 +501,7 @@ he%20requirements%2C%20and%20is%20it%
 💙Automated withdrawals: Fully Deployed✅<br>
       </div>
     </div>
-    <a href="https://wa.me/2349164872447?
-
-text=I%20am%20ready%20to%20join%20the%
-
-20MiAmor%20Platform.%20What%20are%20t
-
-he%20requirements%2C%20and%20is%20it%
-
-20available%20in%20my%20country%3F"><button class="join-btn">START WITH MIAMOR ULTRA</button></a>
+    <a href="https://tr.ee/LqPXfhcuSx"><button class="join-btn">START WITH MIAMOR ULTRA</button></a>
     
   </div>
 
