Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -330,11 +330,11 @@
   <footer>
     <img src="Milogo.png" alt="MiAmor Logo" class="logo">
     <div class="social-icons">
-      <a href="#"><i class="fab fa-facebook"></i></a>
-      <a href="#"><i class="fab fa-whatsapp"></i></a>
-      <a href="#"><i class="fab fa-telegram"></i></a>
-      <a href="#"><i class="fab fa-tiktok"></i></a>
-      <a href="#"><i class="fab fa-x-twitter"></i></a>
+      <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-facebook"></i></a>
+      <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-telegram"></i></a>
+      <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-tiktok"></i></a>
+      <a href="https://tr.ee/LqPXfhcuSx"><i class="fab fa-x-twitter"></i></a>
     </div>
     <p>© 2025 MiAmor Platform. All rights reserved.</p>
   </footer>
