Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -310,6 +310,16 @@
       <input type="password" id="password" class="form-control" required />
     </div>
 
+    <div class="form-group">
+  <label for="package">Select Package</label>
+  <select id="package" class="form-control" required>
+    <option value="">-- choose a package --</option>
+    <option value="miamor plus">miamor plus</option>
+    <option value="miamor standard">miamor standard</option>
+  </select>
+</div>
+
+
     <a href="How-miamor-works.html" class="mil-btn mil-m mil-add-arrow mil-adaptive-right" onclick="storeFullname()" type="button">Join Now!</a>
   </form>
 
