Miamor-form.html

--- a/Miamor-form.html
+++ b/Miamor-form.html
@@ -313,7 +313,7 @@
     <div class="form-group">
   <label for="package">Select Package</label>
   <select id="package" class="form-control" required>
-    <option value="">-- choose a package --</option>
+    <option value="">Choose a package</option>
     <option value="miamor plus">miamor plus</option>
     <option value="miamor standard">miamor standard</option>
   </select>
